add LICENSE (from header); update CMake copyright

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Copyright (C) 2017 David Hirvonen
+# Boilerplate: Copyright (C) 2014-2017 Ruslan Baratov
+# Modification: Copyright (C) 2017 David Hirvonen
 # License: BSD 2 Clause Software License
 # See LICENSE for the full license.
 
